--- a/app/src/main/res/layout/schedule_list_items.xml
+++ b/app/src/main/res/layout/schedule_list_items.xml
@@ -75,7 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="1"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 tools:text="0"/>
         </LinearLayout>
