--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,6 +38,10 @@
                 android:id="@+id/nav_setting"
                 android:icon="@drawable/ic_drawer_setting_24dp"
                 android:title="@string/navigation_drawer_title_setting"/>
+            <item
+                android:id="@+id/nav_search"
+                android:icon="@drawable/ic_search_24dp"
+                android:title="@string/navigation_drawer_title_search"/>
         </menu>
     </item>
 
