#refactoring migrating to androidx; upgrading gradle and android version;

--- a/app/src/main/res/layout/content_details.xml
+++ b/app/src/main/res/layout/content_details.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:padding="16dp"
-              app:layout_behavior="@string/appbar_scrolling_view_behavior"
-              tools:showIn="@layout/activity_details">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_details">
 
     <LinearLayout
         style="@style/ScheduleDetailItemContainer"
@@ -16,7 +16,7 @@
 
         <ImageView
             style="@style/ScheduleDetailIcon"
-            android:src="@drawable/ic_clock_24dp"/>
+            android:src="@drawable/ic_clock_24dp" />
 
         <Button
             android:id="@+id/btn_schedule_date_start"
@@ -24,13 +24,12 @@
             android:layout_width="wrap_content"
             android:text="2016.07.07"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/btn_schedule_time_start"
@@ -40,7 +39,7 @@
             android:gravity="right|center_vertical"
             android:text="11:00"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
     </LinearLayout>
 
     <LinearLayout
@@ -49,7 +48,7 @@
 
         <ImageView
             style="@style/ScheduleDetailIcon"
-            android:src="@drawable/ic_clock_24dp"/>
+            android:src="@drawable/ic_clock_24dp" />
 
         <Button
             android:id="@+id/btn_schedule_date_end"
@@ -57,13 +56,12 @@
             android:layout_width="wrap_content"
             android:text="2016.07.07"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/btn_schedule_time_end"
@@ -72,14 +70,14 @@
             android:gravity="right|center_vertical"
             android:text="12:00"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         style="@style/ScheduleDetailItemContainer"
@@ -87,20 +85,20 @@
 
         <ImageView
             style="@style/ScheduleDetailIcon"
-            android:src="@drawable/ic_check_box_24dp"/>
+            android:src="@drawable/ic_check_box_24dp" />
 
         <Button
             android:id="@+id/btn_state"
             style="@style/ScheduleDetailButton"
             android:text="未完成"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         style="@style/ScheduleDetailItemContainer"
@@ -108,20 +106,20 @@
 
         <ImageView
             style="@style/ScheduleDetailIcon"
-            android:src="@drawable/ic_ring_24dp"/>
+            android:src="@drawable/ic_ring_24dp" />
 
         <Button
             android:id="@+id/btn_alarm_time"
             style="@style/ScheduleDetailButton"
             android:text="提前10分钟提醒"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         style="@style/ScheduleDetailItemContainer"
@@ -129,21 +127,21 @@
 
         <ImageView
             style="@style/ScheduleDetailIcon"
-            android:src="@drawable/ic_type_24dp"/>
+            android:src="@drawable/ic_type_24dp" />
 
         <Button
             android:id="@+id/btn_schedule_type"
             style="@style/ScheduleDetailButton"
             android:text="@string/navigation_drawer_title_daily"
             android:enabled="false"
-            android:textColor="#000000"/>
+            android:textColor="#000000" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         style="@style/ScheduleDetailItemContainer"
@@ -153,7 +151,7 @@
             style="@style/ScheduleDetailIcon"
             android:layout_gravity="top"
             android:layout_marginTop="@dimen/schedule_detail_item_note_margin_top"
-            android:src="@drawable/ic_comment_24dp"/>
+            android:src="@drawable/ic_comment_24dp" />
 
         <EditText
             android:id="@+id/edit_schedule_note"
@@ -161,7 +159,7 @@
             android:layout_gravity="top"
             android:layout_marginTop="@dimen/schedule_detail_item_note_margin_top"
             android:hint="添加备注"
-            android:enabled="false"/>
+            android:enabled="false" />
 
     </LinearLayout>
 </LinearLayout>
