--- a/app/src/main/res/menu/activity_details_menu.xml
+++ b/app/src/main/res/menu/activity_details_menu.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_del"
-          android:title="@string/schedule_del"
-          app:showAsAction="always" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_del"
+        android:title="@string/schedule_del"
+        app:showAsAction="always" />
 </menu>
